--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "clean": "rm -r build node_modules"
   },
   "devDependencies": {
     "@types/jest": "^21.1.8",
