update the packages

--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "my-video-app",
+  "name": "my-movie-db",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^3.3.7",
+    "history": "1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router": "3",
     "react-scripts-ts": "2.8.0",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "tslint": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
