--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
-    "tslint": "^5.8.0"
+    "sweetalert": "^2.1.0",
+    "tslint": "^5.8.0",
+    "validator": "^9.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
