--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "my-movie-db",
   "version": "0.1.0",
+  "description": "A starting point for Node.js express apps with TypeScript",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RobertoMSousa/my-movie-db"
+  },
+  "author": "Roberto Sousa",
+  "license": "MIT",
   "private": true,
+  "engines": {
+    "npm": "5.6.0",
+    "node": "8.9.2",
+    "yarn": "1.3.2"
+  },
   "dependencies": {
     "axios": "^0.17.1",
     "history": "1",
