--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts-ts": "2.8.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.8.0",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "sweetalert": "^2.1.0",
