--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "yarn": "1.3.2"
   },
   "dependencies": {
+    "got": "^8.2.0",
     "history": "1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
